anna pushing updated bootstraps for inc proj; changes to appendix as sent to the typists. mostly abc/care and benefit/cost

--- a/Appendices/BackoftheEnvelopeCBA.tex
+++ b/Appendices/BackoftheEnvelopeCBA.tex
@@ -1,7 +1,7 @@
 
-\section{Back-of-the-Envelope Cost Benefit Analysis of ABC} \label{appendix:back}
+\section{Back-of-the-Envelope Cost/benefit Analysis of ABC} \label{appendix:back}
 
-\noindent This section presents a back-of-the-envelope cost-benefit analysis in a similar spirit to that of \citet{Kline-Walters_2015_NBER-Evaluating} on Head Start, using data from the Head Start Impact Study. For simplicity, we leave CARE out of this exercise. The implementation of \citet{Kline-Walters_2015_NBER-Evaluating} is based on the argument of  \citet{Chetty_Friedman_etal_2010_HowDoesYour} that a standard deviation in a kindergarten IQ score generates an increase of $13.1\%$ in earnings at age 27.\footnote{\citet{Chetty_Friedman_etal_2010_HowDoesYour} do not present a cost-benefit analysis. They (i) present an estimate of the effect that an change in the classroom size has on children's IQ in kindergarten; (ii) link this effect to earnings gains at age 27, by the implied relationship between the gain in IQ and the gain in earnings at age 27 given the change in classroom size.}\\
+\noindent This section presents a back-of-the-envelope cost/benefit analysis in a similar spirit to that of \citet{Kline-Walters_2015_NBER-Evaluating} on Head Start, using data from the Head Start Impact Study. For simplicity, we leave CARE out of this exercise. The implementation of \citet{Kline-Walters_2015_NBER-Evaluating} is based on the argument of  \citet{Chetty_Friedman_etal_2010_HowDoesYour} that a standard deviation in a kindergarten IQ score generates an increase of $13.1\%$ in earnings at age 27.\footnote{\citet{Chetty_Friedman_etal_2010_HowDoesYour} do not present a cost/benefit analysis. They (i) present an estimate of the effect that an change in the classroom size has on children's IQ in kindergarten; (ii) link this effect to earnings gains at age 27, by the implied relationship between the gain in IQ and the gain in earnings at age 27 given the change in classroom size.}\\
 
 \noindent We perform two exercises. First, one similar to that of \citet{Kline-Walters_2015_NBER-Evaluating}. We calculate the treatment effect of ABC on a kindergarten IQ test---Wechsler Preschool and Primary Scale of Intelligence at Age 5, $\widehat{\Delta}$, and let the (discounted to age 5) life-cycle earnings in 2014 USD dollars be $\$460,793.34$. We take this number straight from \citet{Kline-Walters_2015_NBER-Evaluating}. Based on this, we calculate the total benefits induced by the program as: 
 
@@ -22,7 +22,7 @@ B = 460,793.34 \left( \widehat{\Delta} R_{IQ}  N_{\text{Treated}}  -  N_{\text{C
 \includegraphics[width=.65\columnwidth]{Output/abc_chettytype_return.eps}
 \floatfoot{
 \footnotesize
-Note: Benefit-to-cost ratio as a function of diverse earnings-returns to a standard deviation of a kindergarten IQ test.
+Note: Benefit/cost ratio as a function of diverse earnings-returns to a standard deviation of a kindergarten IQ test.
 }
 \end{figure}
 \end{center}
@@ -35,7 +35,7 @@ Note: Benefit-to-cost ratio as a function of diverse earnings-returns to a stand
 \includegraphics[width=.65\columnwidth]{Output/abc_chettytype_pv.eps}
 \floatfoot{
 \footnotesize
-Note: Benefit-to-cost ratio as a function of diverse net present value of earnings.
+Note: Benefit/cost ratio as a function of diverse net present value of earnings.
 }
 \end{figure}
 \end{center}
