--- a/Appendices/Income.tex
+++ b/Appendices/Income.tex
@@ -36,7 +36,7 @@ sum the labor income of the respondent and her partner. \\
 
 \subsection{Data Sources}
 
-\noindent Income of the ABC and CARE subjects is observed in detail at ages 21 and 30. For both ages,
+\noindent Income of the ABC/CARE subjects is observed in detail at ages 21 and 30. For both ages,
 we separate labor income from public-transfer income. At age 21, public-transfer income includes Aid to
 Families with Dependent Children (AFDC) subsidies, food stamps, survivor benefits, disability
 benefits, social security, rent subsidies, and fuel subsidies. At age 30, public-transfer income includes food stamps, welfare, housing assistance, workman's
@@ -68,12 +68,12 @@ subject income for ages 31 through 67. \\
 \$300,000 (2014 USD) at any given year. With the mean labor income (2014 USD) in the ABC
 sample being \$12,232 at age 21 and \$32,782 at age 30, and the maximum reported
 being \$189,938, the cut-off we impose on the auxiliary data is high enough
-so that everyone in the ABC  and CARE samples are represented, yet low enough to
-exclude high-earning individuals in the auxiliary sample that do not reflect the ABC or CARE samples well. \\
+so that everyone in the ABC/CARE sample is represented, yet low enough to
+exclude high-earning individuals in the auxiliary sample that do not reflect the ABC/CARE sample well. \\
 
 \noindent We do not impose a restriction on birth year on the NLSY as all respondents are aged between 47 and 55
 at the time of the last interview (conducted in 2012). This age range is within the 31--67 range for which
-we extrapolate the income of the ABC and CARE subjects. \\
+we extrapolate the income of the ABC/CARE subjects. \\
 
 \noindent Given the biennial nature of the NLSY, we only observe each subject at either odd or even
 ages. Not only does this reduce the size of the sample on which we fit our prediction model
