--- a/Appendices/Sensitivity.tex
+++ b/Appendices/Sensitivity.tex
@@ -1,25 +1,25 @@
 \section{Sensitivity Analysis} \label{appendix:sensitivity}
 
 \noindent This appendix evaluates how the estimates in the main paper vary as we alter certain
-sample selections from all of our data sources and other parameters. We analyze sensitivity due to (i) assumptions on the values of the discount rate; (ii) assumptions on the deadweight loss to society coming from taxes raised to fund public programs; and (iii) the magnitude of the components contributing to the benefit-cost ratio and internal rate of return. \\
+sample selections from all of our data sources and other parameters. We analyze sensitivity due to (i) assumptions on the values of the discount rate; (ii) assumptions on the deadweight loss to society coming from taxes raised to fund public programs; and (iii) the magnitude of the components contributing to the benefit/cost ratio and internal rate of return. \\
 
 
 \subsection{Varying the Discount Rate}
 
-%In this section we explore how the internal rate of return and benefit-cost ratio
+%In this section we explore how the internal rate of return and benefit/cost ratio
 %change when we adjust various components of the cash flow, as well as various parameters
 %we assume. Not only does this provide us with an idea of how stable our estimates 
 %are, but also which components or assumptions are responsible for any instabilities
 %we find in our estimates.
 
-\noindent Below we examine how the benefit-cost ratio is impacted by our choice of the discount rate. \\
+\noindent Below we examine how the benefit/cost ratio is impacted by our choice of the discount rate. \\
 
-\noindent Figure \ref{fig:bcr_discount} displays how the benefit-cost ratio changes as we adjust
+\noindent Figure \ref{fig:bcr_discount} displays how the benefit/cost ratio changes as we adjust
 the rate at which we discount the cash flows. We find that for males, the benefits of 
 the programs exceed the costs for discount rates as high as 12\%. We also
-find that the benefit-cost ratios for discount rates of 2--12\% remain within the 
+find that the benefit/cost ratios for discount rates of 2--12\% remain within the 
 80\% confidence interval of our actual point estimate. The case is different for females,
-for whom the ratio falls below 1 at a discount rate of 6\%. The benefit-cost ratio for 
+for whom the ratio falls below 1 at a discount rate of 6\%. The benefit/cost ratio for 
 females remain within the 80\% confidence interval of our estimate for discount rates
 of 2--15\%. Although the alternate estimates generally remain within the 80\%
 confidence intervals for both males and females, the slope of the curves in Figure
@@ -27,7 +27,7 @@ confidence intervals for both males and females, the slope of the curves in Figu
 the discount rate, especially for males. 
 
 \begin{figure}[H]
-\caption{Benefit-Cost Ratio vs. Discount Rate} \label{fig:bcr_discount}
+\caption{Benefit/cost Ratio vs. Discount Rate} \label{fig:bcr_discount}
 	\begin{subfigure}[h]{0.8\textwidth}
 	\centering
 	\caption{Females} \label{fig:bcr_discount_f1}
@@ -40,10 +40,10 @@ the discount rate, especially for males.
 	\includegraphics[width=\textwidth]{AppOutput/Sensitivity/bcr_discount_m1.eps}
 	\end{subfigure}
 	\floatfoot{
-	\noindent Note: These graphs display how the benefit-cost ratios change
+	\noindent Note: These graphs display how the benefit/cost ratios change
 	for females and males as we vary the rate at which we discount to obtain the 
 	present value. 
-	The red line indicates a benefit-cost ratio of 1. 
+	The red line indicates a benefit/cost ratio of 1. 
 	The hollow circle represents our actual estimates, whereas the
 	solid dots represent the alternative estimates we obtain by varying the discount rate. 
 	The estimates presented in the paper assume that the marginal 
@@ -57,7 +57,7 @@ the discount rate, especially for males.
 
 \subsection{Varying Deadweight Loss}
 
-\noindent Below we examine how our estimates of the internal rate of return (IRR) and benefit-cost
+\noindent Below we examine how our estimates of the internal rate of return (IRR) and benefit/cost
 ratios move with respect to changes in the marginal cost of welfare. \\
 
 \noindent Figure \ref{fig:irr_dwl} shows how the IRR changes as we adjust
@@ -67,7 +67,7 @@ steadily decline as we increase the marginal cost of welfare to \$3 for every do
 of tax revenue. This is likely due
 to the fact that both females and males in treatment live longer, and are expected to 
 receive more Medicare and Medicaid benefits in their later life. 
-Also, we treat the costs of implementing ABC and CARE as a public cost. 
+Also, we treat the costs of implementing ABC/CARE as a public cost. 
 Thus, the steady increase in deadweight loss results in a 
 steady decline in the IRR. Nonetheless, we see that the IRRs 
 remain within the 80\% confidence interval of our original estimate 
@@ -102,19 +102,19 @@ represents a \$0.25 increment in the cost of welfare per dollar of tax revenue).
 	}
 \end{figure}
 
-\noindent Figure \ref{fig:bcr_dwl} illustrates how the benefit-cost ratio changes as we vary
+\noindent Figure \ref{fig:bcr_dwl} illustrates how the benefit/cost ratio changes as we vary
 the marginal cost of welfare. For females we see that the costs continue to exceed the benefits (both are discounted at a rate of 4\%) even when the marginal cost of welfare is
 assumed to equal \$1 for every dollar of tax revenue. For males, the benefits
 exceed the costs even as we increase the deadweight loss to \$3 for every dollar of tax
-revenue. The resilience of the benefit-cost ratio of males is attributed to the 
-large impacts ABC and CARE had on criminal activity, which bears a large cost to society. As we
+revenue. The resilience of the benefit/cost ratio of males is attributed to the 
+large impacts ABC/CARE had on criminal activity, which bears a large cost to society. As we
 increase the marginal cost of welfare, we are in fact increasing the stream of benefits
 associated with the reduction in criminal costs of males. At the same time, however,
 we are also increasing the later-life public medical costs associated with Medicare
 and Medicaid, as well as the program costs. 
 
 \begin{figure}[H]
-\caption{Benefit-Cost Ratio vs. Deadweight Loss} \label{fig:bcr_dwl}
+\caption{Benefit/cost Ratio vs. Deadweight Loss} \label{fig:bcr_dwl}
 	\begin{subfigure}[h]{0.8\textwidth}
 	\centering
 	\caption{Females} \label{fig:bcr_dwl_f}
@@ -127,9 +127,9 @@ and Medicaid, as well as the program costs.
 	\includegraphics[width=\textwidth]{AppOutput/Sensitivity/bcr_dwl_m1.eps}
 	\end{subfigure}
 	\floatfoot{
-	\noindent Note: These graphs display how the benefit-cost ratio changes
+	\noindent Note: These graphs display how the benefit/cost ratio changes
 	for females and males as we vary the marginal cost of welfare.  
-	The red line indicates a benefit-cost ratio of 1. 
+	The red line indicates a benefit/cost ratio of 1. 
 	The hollow circle represents our actual estimates, whereas the
 	solid dots represent the alternative estimates we obtain by varying the marginal
 	cost of welfare. The estimates 
@@ -143,7 +143,7 @@ and Medicaid, as well as the program costs.
 \subsection{Varying Component Magnitudes}
 \label{app:sa_factors}
 
-\noindent Below we explore how the internal rate of return (IRR) and benefit-cost ratio change as
+\noindent Below we explore how the internal rate of return (IRR) and benefit/cost ratio change as
 we increase and decrease the value of each component of the benefit and cost streams. This entails
 multiplying each component by factors ranging from 0 to 3. A factor of 0 is equivalent
 to removing the component entirely from our analysis. In the particular
@@ -162,7 +162,7 @@ interval of the original estimate. This occurs when we double the parental incom
 flow of benefits. By tripling the component, we obtain an IRR exceeding 100\%, which we
 do not display in the chart above. This sensitivity is due to both the magnitude of the
 treatment effect on parental income, as well as how the treatment effect took place
-earlier in the ABC and CARE subjects' lives. The sensitivity of the IRR to the program costs
+earlier in the ABC/CARE subjects' lives. The sensitivity of the IRR to the program costs
 is also a result of the timing of the costs in the subjects lives. As females in the treatment groups attained higher levels of education
 than females in the control groups, we observe that the IRR decreases as we multiply the
 expenditure on education by increasingly large factors. On the other hand, this translates
@@ -266,7 +266,7 @@ by increasingly large factors.
 Finally, the IRR steadily 
 increases for males as we increase the magnitude of the criminal cost component. 
 This is not surprising because the reduction in the costs of crimes is the largest 
-benefit of ABC and CARE for males. 
+benefit of ABC/CARE for males. 
 
 
 \begin{figure}[H]
@@ -350,20 +350,20 @@ benefit of ABC and CARE for males.
 	}
 \end{figure}
 
-\noindent Figure \ref{fig:bcrf_factor_f} shows how the benefit-cost ratio changes for females as
+\noindent Figure \ref{fig:bcrf_factor_f} shows how the benefit/cost ratio changes for females as
 we multiply each component of the benefits and costs by a factor between 0 and 3. We 
 observe that the ratio is generally insensitive to changes in all the components, 
 except parental income, labor income, education costs, and program costs. The sensitivity
 to program costs is due to the fact that it is the denominator of the 
-benefit-cost ratio. In the case of the other three components, when discounted, 
-they exhibit the three largest present values. The sensitivity of the benefit-cost
+benefit/cost ratio. In the case of the other three components, when discounted, 
+they exhibit the three largest present values. The sensitivity of the benefit/cost
 ratio to changes in these components therefore indicates the magnitude of those 
 components relative to the rest, with parental income having the largest magnitude
 in terms of discounted treatment effect, followed by labor income, and then
 education costs. 
 
 \begin{figure}[H]
-\caption{Benefit-Cost Ratio vs.~Components, Females} \label{fig:bcrf_factor_f}
+\caption{Benefit/cost Ratio vs.~Components, Females} \label{fig:bcrf_factor_f}
 
 	\begin{subfigure}[h]{0.8\textwidth}
 	\centering
@@ -432,12 +432,12 @@ education costs.
 	\end{subfigure}
 	
 	\floatfoot{
-	\noindent Note: These graphs display how the benefit-cost ratio changes
+	\noindent Note: These graphs display how the benefit/cost ratio changes
 	for females as we multiply each component by a factor from 0 to 3. 
-	The red line indicates a benefit-cost ratio of 1. 
+	The red line indicates a benefit/cost ratio of 1. 
 	The hollow circle represents our actual estimates, whereas the
 	solid dots represent the alternative estimates we obtain by varying the 
-	magnitude of each component. The benefit-cost ratio 
+	magnitude of each component. The benefit/cost ratio 
 	presented in the paper is equal to those presented above when the multiplicative
 	factor is equal to 1. The estimates are means of the empirical bootstrap 
 	distribution. The 80\% confidence intervals are obtained by taking the 10\textsuperscript{th}
@@ -445,17 +445,17 @@ education costs.
 	}
 \end{figure}
 
-\noindent Figure \ref{fig:bcrf_factor_m} displays how the benefit-cost ratio for males varies
+\noindent Figure \ref{fig:bcrf_factor_m} displays how the benefit/cost ratio for males varies
 as we multiply each component of the benefits and costs by a factor between 0 and 3.
 We observe that the ratio is insensitive to the scaling of public-transfer income, health costs,
 education costs, and control substitution costs. Barring program costs, the components that
-vary the benefit-cost ratio the most are crime costs, parental income, labor income,
+vary the benefit/cost ratio the most are crime costs, parental income, labor income,
 health expenditure, and QALYs, in that order. This is simply a result of the relevant 
 magnitude of each of those components in the benefits stream after discounting. 
 
 
 \begin{figure}[H]
-\caption{Benefit-Cost Ratio vs.~Components, Males} \label{fig:bcrf_factor_m}
+\caption{Benefit/cost Ratio vs.~Components, Males} \label{fig:bcrf_factor_m}
 	
 	\begin{subfigure}[h]{0.8\textwidth}
 	\centering
@@ -527,12 +527,12 @@ magnitude of each of those components in the benefits stream after discounting.
 	\end{subfigure}
 	
 	\floatfoot{
-	\noindent Note: These graphs display how the benefit-cost ratio changes
+	\noindent Note: These graphs display how the benefit/cost ratio changes
 	for males as we multiply each component by a factor from 0 to 3. 
-	The red line indicates a benefit-cost ratio of 1. 
+	The red line indicates a benefit/cost ratio of 1. 
 	The hollow circle represents our actual estimates, whereas the
 	solid dots represent the alternative estimates we obtain by varying the 
-	magnitude of each component. The benefit-cost ratio 
+	magnitude of each component. The benefit/cost ratio 
 	presented in the paper is equal to those presented above when the multiplicative
 	factor is equal to 1. The estimates are means of the empirical bootstrap 
 	distribution. The 80\% confidence intervals are obtained by taking the 10\textsuperscript{th}
@@ -540,7 +540,7 @@ magnitude of each of those components in the benefits stream after discounting.
 	}
 \end{figure}
 
-\noindent Overall, we find the benefit-cost ratio to be stable across changes in the data, 
+\noindent Overall, we find the benefit/cost ratio to be stable across changes in the data, 
 as well as changes in our assumptions regarding the discount rate and the marginal
 cost of welfare. The IRR tends to be more sensitive to changes in the data
 and assumptions.
