--- a/Appendices/ProgramCosts.tex
+++ b/Appendices/ProgramCosts.tex
@@ -1,6 +1,6 @@
-\section[Program Costs of ABC]{Program Costs of ABC\footnote{This section of the paper is based on joint work with Sylvi Kuperman.}} \label{app:programcosts}
+\section[Program Costs of ABC/CARE]{Program Costs of ABC/CARE\footnote{This section of the paper is based on joint work with Sylvi Kuperman.}} \label{app:programcosts}
 
-\noindent In this appendix, we detail the associated costs of the program for the treatment group during each year of active participation in ABC and CARE. Table \ref{tab:treat-cost}  describes the components of the treatment and their costs. It is crucial to note that our main estimations are based on pooling the children receiving center-based childcare in ABC to compare them with the control-group children in both programs. Children who were assigned to receive center-based childcare in CARE received family education in the form on home visits (see Appendix~\ref{appendix:programs}). None of the evidence we have at hand indicates that family education implied an additional cost. The staff implementing the center-based treatment implemented the home visits, without receiving an additional payment for the home visits.\footnote{A caveat of our calculation could be that we do not account for the transport cost to the children's homes. Our information indicates that the children lived relatively close to the center and the staff belonged to the same communities of the center. Thus, we conclude that this transportation cost was minimal.} \\
+\noindent In this appendix, we detail the associated costs of the program for the treatment group during each year of active participation in ABC/CARE. Table \ref{tab:treat-cost}  describes the components of the treatment and their costs. It is crucial to note that our main estimations are based on pooling the children receiving center-based childcare in ABC to compare them with the control-group children in both programs. Children who were assigned to receive center-based childcare in CARE received family education in the form on home visits (see Appendix~\ref{appendix:programs}). None of the evidence we have at hand indicates that family education implied an additional cost. The staff implementing the center-based treatment implemented the home visits, without receiving an additional payment for the home visits.\footnote{A caveat of our calculation could be that we do not account for the transport cost to the children's homes. Our information indicates that the children lived relatively close to the center and the staff belonged to the same communities of the center. Thus, we conclude that this transportation cost was minimal.} \\
 
 \begin{table}[H]
 \caption{Treatment Costs per Subject} \label{tab:treat-cost}
@@ -13,7 +13,7 @@
 \scriptsize
 \item Sources: \textbf{Treatment Component} \cite{Ramey_Collier_etal_1976_CarolinaAbecedarianProject}; \cite{Ramey_McGinness_etal_1982_Abecedarianapproach}; \cite{Clarke_Campbell_1998_ABC_Comparison_ECRQ}. \textbf{Costs:} \cite{Barnett_Masse_2002_benefitcost}; \cite{FPGC_Progress-Report_1973}; \cite{Cutler_Meara_1998_Med-Costs_BOOK}; \cite{Helburn_1995_Childcare-Report}; Quarterly Census of Employment and Wages (1975).
 
-\item Note: This table summarizes the average cost per subject (inflated to 2014 USD) of ABC treatment components.
+\item Note: This table summarizes the average cost per subject (inflated to 2014 USD) of ABC/CARE treatment components.
 \end{tablenotes}
 \end{threeparttable}
 \end{adjustbox}
@@ -23,7 +23,7 @@
 \subsection{Center-based Education, Childcare and Family Services} \label{sec:implementation}
 
 \noindent Only the treatment group utilized the center-based childcare and family
-services provided through ABC. The associated costs include the salaries of center staff, the marginal costs of equipment and facilities, and the associated maintenance costs. \\
+services provided through ABC/CARE. The associated costs include the salaries of center staff, the marginal costs of equipment and facilities, and the associated maintenance costs. \\
 
 \noindent Table \ref{tab:allprogram} shows these costs by the child's age. \\
 
@@ -67,18 +67,18 @@ Food  & 280  & 1,133 &1,417 &1,417 &1,417 &5,664\\ %\hline
 
 \subsection{Costs of Medical Services} \label{sec:medical}
 \noindent Medical services were extended to both the treatment and control groups with the
-former receiving much more intensive care. While \cite{Barnett_Masse_2002_benefitcost} do not consider the cost of the medical care provided in ABC, we include the costs associated with the general health care provided to subjects, excluding
+former receiving much more intensive care. While \cite{Barnett_Masse_2002_benefitcost} do not consider the cost of the medical care provided in ABC/CARE, we include the costs associated with the general health care provided to subjects, excluding
 those used for auxiliary research purposes.
 Table \ref{tab:treat-cost} delineates the medical costs incurred by the average subject in the treatment group in addition to the other costs of the program. \\
 
-\noindent Because ABC was one of the first programs to accept cohorts of infants, a great priority was placed on monitoring and evaluating infant health, particularly with respect to contagious respiratory illness. Grants to conduct a medical study made up a significant part of ABC funding. We do not include research costs---which were considerable---in the estimation of the medical costs of ABC and CARE. Rather we include costs incurred due to day-to-day care and goods provided to subjects. This includes regular check-ups and tests conducted  by a full-time on-site pediatric fellow and up to two full-time on-site nurses. Subjects were also monitored daily for signs of illness. For major health issues, subjects were referred to a local hospital; however, staff were equipped to tend to general health issues and kept some non-prescription medication on hand. \\
+\noindent Because ABC was one of the first programs to accept cohorts of infants, a great priority was placed on monitoring and evaluating infant health, particularly with respect to contagious respiratory illness. Grants to conduct a medical study made up a significant part of ABC funding. We do not include research costs---which were considerable---in the estimation of the medical costs of ABC/CARE. Rather we include costs incurred due to day-to-day care and goods provided to subjects. This includes regular check-ups and tests conducted  by a full-time on-site pediatric fellow and up to two full-time on-site nurses. Subjects were also monitored daily for signs of illness. For major health issues, subjects were referred to a local hospital; however, staff were equipped to tend to general health issues and kept some non-prescription medication on hand. \\
 
 \noindent To approximate the average cost of medical care, we use  estimates of the average cost of medical care for infants and children 1 year to 4 years old in the 1970s. \cite{Cutler_Meara_1998_Med-Costs_BOOK} document average national health expenditure as reported by  the 1970 Survey of Health Services  Utilization  and Expenditures and the 1977 National Medical Care Utilization  and Expenditure Survey. These surveys have large samples (11,619 and 38,815, respectively) and measure the use of health services, including hospital admissions and physician visits. From these surveys, we estimate that the upper bounds on cost of medical care for subjects are \$735 in the first year of life and \$694 for each subsequent year of the program. However, because these costs include cost of health complications, including NICU costs, we refer to \cite{Robinson_etal_1974_FPP} for a more conservative estimate of first-year medical costs. \cite{Robinson_etal_1974_FPP} estimate the cost of six well-child visits provided by government-sponsored health clinics in the first year of life to be \$610 (2014 USD). \\
 
 \subsection{Staff Salaries}
 \noindent FPGC had rooms for infants, toddlers, and preschool-age children---each with different child-to-staff ratio---see Appendix~\ref{appendix:background}. Classroom staff included teachers and teacher aides. Program staff also included administrators, researchers, and support staff (e.g. bus drivers, janitorial, and food preparation staff). We do not include the cost of research staff in our estimations. \\
 
-\noindent \cite{Barnett_Masse_2002_benefitcost} used employment and wage documentation from FPGC to estimate costs. We deviate from their calculations in the following ways. Due to lack of documentation of the services provided to ABC subjects, we do not include costs of volunteers, consultants, or an on-site social worker. However, we add in costs of support staff including janitorial and food preparation staff estimated from the Quarterly Census of Employment and Wages (1975). \\
+\noindent \cite{Barnett_Masse_2002_benefitcost} used employment and wage documentation from FPGC to estimate costs. We deviate from their calculations in the following ways. Due to lack of documentation of the services provided to ABC/CARE subjects, we do not include costs of volunteers, consultants, or an on-site social worker. However, we add in costs of support staff including janitorial and food preparation staff estimated from the Quarterly Census of Employment and Wages (1975). \\
 
 \subsection{Operating and Facilities Costs}
 
