anna changing structure of appendix files

--- a/Appendices/MoreOutcomes.tex
+++ b/Appendices/MoreOutcomes.tex
@@ -1,6 +1,6 @@
 \section{{Expanding the Analyzed Outcomes}} \label{appendix:moreoutcomes}
 
-\noindent In this appendix, we expand the analysis in Section~\ref{section:results} by considering an additional set of outcomes. Instead of considering \noutcomes, we consider \noutcomesexpp when pooling the sample and \noutcomesexpm\ and \noutcomesexpf\ when for males and females, respectively.\footnote{We fail to estimate some treatment effects because in some cases the treatment indicator and the controls entirely determine the outcome. For the \noutcomes\ in Section~\ref{section:results}, we do not have this problem.} The difference between this set of outcomes and the set we present in Section~\ref{section:results} is that (i) the outcomes in Section~\ref{section:results} contain outcomes we monetize when computing the cost-benefit analysis; and (ii) it is not entirely clear if treatment should have an effect on the outcomes we add in this appendix. The \noutcomes\ outcomes in this appendix include the \noutcomes\ outcomes in Section~\ref{section:results}.\\
+\noindent In this appendix, we expand the analysis in Section~\ref{section:results} by considering an additional set of outcomes. Instead of considering \noutcomes, we consider \noutcomesexpp\ when pooling the sample and \noutcomesexpm\ and \noutcomesexpf\ when for males and females, respectively.\footnote{We fail to estimate some treatment effects because in some cases the treatment indicator and the controls entirely determine the outcome. For the \noutcomes\ in Section~\ref{section:results}, we do not have this problem.} The difference between this set of outcomes and the set we present in Section~\ref{section:results} is that (i) the outcomes in Section~\ref{section:results} contain outcomes we monetize when computing the cost-benefit analysis; and (ii) it is not entirely clear if treatment should have an effect on the outcomes we add in this appendix. The \noutcomes\ outcomes in this appendix include the \noutcomes\ outcomes in Section~\ref{section:results}.\\
 
 \noindent To illustrate the difference between the outcomes in this appendix and the outcomes in Section~\ref{section:results}, consider two outcomes related to employment. In Section~\ref{section:results}, we include employment at age 30. In this appendix, we include both employment at age 30 and job satisfaction at age 30. Job satisfaction is a subjective variable, and it is not as clear what the effect of treatment on outcome is.\\
 
