anna Heckman and Maria's edits to appendix made

--- a/AppResOutput/1_abccare.tex
+++ b/AppResOutput/1_abccare.tex
@@ -26,6 +26,7 @@
 
 \subsection{{Combining Functions, by Category}}
 
+\noindent The tables in this section contain an extra column. This column contains the number of variables for the outcome category used to construct the combining function statistic. \\
 
 	\begin{table}[H]
      \caption{Combining Functions by Category, Pooled Sample} 
@@ -381,6 +382,7 @@
 
 \subsection{Treatment Effects for Pooled Sample, Step Down}
 
+\noindent The tables in this section present $p$-values calculated using the step-down method\footnote{\citet{Lehmann_Romano_2005_testing,Romano_Shaikh_2006_AnnStat}. See \citet{Heckman_Moon_etal_2010_QE} for an example of an application.}
 
 	\begin{table}[H]
      \caption{Treatment Effects on IQ Scores, Pooled Sample}
