--- a/Appendices/ProgramCostsAlt.tex
+++ b/Appendices/ProgramCostsAlt.tex
@@ -1,6 +1,6 @@
 \section[Program Costs of ABC/CARE]{Program Costs\footnote{This section of the appendix is based on joint work with Sylvi Kuperman.}} \label{app:programcosts}
 
-\noindent In this appendix, we document the sources informing our programs' costs calculation in Section~\ref{section:programscosts}. We use a battery of primary sources obtained in the Archives of the University of North Carolina at Chapel Hill---Records of the Office of the Vice Chancellor \citet{UNC-Archives_Health-Affairs}. A copy of these battery of documents is available upon request. Figure~\ref{figure:who} exemplifies one of these sources, in which the monthly cost of treatment per child for the year 1977 is categorized by source of funding.
+\noindent In this appendix, we document the sources informing our programs' costs calculation in Section~\ref{section:programscosts}. We use a battery of primary sources obtained in the Archives of the University of North Carolina at Chapel Hill---Records of the Office of the Vice Chancellor \citet{UNC-Archives_Health-Affairs}. A copy of these battery of documents is available upon request \textbf{[JJH: To whom? We should give a website.]}. Figure~\ref{figure:who} exemplifies one of these sources, in which the monthly cost of treatment per child for the year 1977 is categorized by source of funding.
 
 \begin{center}
 \begin{figure}[H] 
@@ -28,8 +28,21 @@ Note: This figure is a photograph provides the estimates for the personnel wages
 \end{figure}
 \end{center}
 
-
-
 \noindent Interviews with the programs' staff \citet{projectcare2014interviews,abc2014-2015interviews}, inform us about additional costs of the programs. An example is the salary of a social worker, who is not part of some of the of the costs estimates reported before but was part of the staff implementing treatment. These interviews are available upon request.\\ 
 
-\noindent Finally, a valuable source is a report written by the program staff \citet{FPG_1979_Progress-Report}. As we note in Section~\ref{section:programscosts}, this report produced an estimate of the cost in a completely independent way, although perhaps using a the same or similar primary sources. Our calculation of the costs comes very close to those in \citet{FPG_1979_Progress-Report}. 
+\noindent Finally, a valuable source is a report written by the program staff \citet{FPG_1979_Progress-Report}. As we note in Section~\ref{section:programscosts}, this report produced an estimate of the cost in a completely independent way, although perhaps using a the same or similar primary sources. Our calculation of the costs comes very close to those in \citet{FPG_1979_Progress-Report}. \\
+
+\noindent We summarize the yearly program costs of ABC/CARE in Table~\ref{tab:totalcosts}. \\
+
+\begin{table}[H]
+\centering
+\begin{threeparttable}
+\caption{Yearly Program Costs, ABC/CARE} \label{tab:totalcosts}
+\footnotesize
+\input{output/programcosts}
+\begin{tablenotes}
+\footnotesize
+\item Note: This table summarizes the yearly costs for ABC/CARE. They are based on primary-source documentation describing ABC. We assume that the costs for ABC and CARE were the same based on conversations with programs' staff \citep{projectcare2014interviews,abc2014-2015interviews}. \\
+\end{tablenotes}
+\end{threeparttable}
+\end{table}
