--- a/Appendices/Health/bgdesc.tex
+++ b/Appendices/Health/bgdesc.tex
@@ -21,12 +21,14 @@ taxes, medical expenditures, and disability benefits. \\
 
 \noindent The core of the microsimulation is a set of models of disease conditions designed to predict future health and functional status of each individual from his or her current health state at age 30. To predict health and economic outcomes over time, the model calculates the transition probabilities between various health states and other outcomes. Health states include diabetes, heart disease, stroke, cancer, hypertension, lung disease, and number of difficulties in physical and instrumental activities of daily living (ADLs and IADLs); health risks include BMI (defined as weight in kilograms divided by height in meters squared, which is used to measure incidence of obesity), binge drinking (defined as binge drinking at least three times per month\footnote{Where binge drinking behavior is defined as drinking more than five alcoholic drinks in an instance for males and more than four for females.}), smoking behavior and (lack of) physical activity; other outcomes include health insurance status, changes in family structure (partnership or marriage, childbearing), labor market participation, working status, receipt of Social Security, participation in public programs, and medical expenditures. We also estimate quality-adjusted life years (QALYs), a measure of the quality of life that adjusts for the burden of disease.\footnote{A QALY equals one year of life in the absence of disease. This measure has been widely used in the literature to evaluate the value of medical interventions and improvements.} \\
 
-\noindent The likelihood of developing a health condition depends on key risk factors including age, gender, education, race and ethnicity, obesity (BMI greater than 30 kg/m$^2$), smoking status, physical activity, age of asthma diagnosis, and lagged health outcomes. By incorporating lagged variables into the model, we account for the likelihood that past behaviors may influence risks far into the future. This capacity is important because prior research indicates that past health behaviors, such as recency of prior smoking and 10-year history of obesity, can influence current health outcomes.\footnote{\citet{Tong_etal_1996-Lung-Carcinoma,Moore_etal_2008_Past-Body-Mass}.} Furthermore, because transition probabilities vary depending on demographic characteristics, such as race and ethnicity, education, gender, and age, the model tracks outcomes by socioeconomic subgroups, and it allows for responses to policies to be subgroup-specific. \\
+\noindent The likelihood of developing a health condition depends on key risk factors including age, gender, education, race and ethnicity, obesity (BMI greater than 30 kg/m$^2$), smoking status, physical activity, age of asthma diagnosis, and lagged health outcomes. By incorporating lagged variables into the model, we account for the likelihood that past behaviors may influence risks far into the future. This capacity is important because prior research indicates that past health behaviors, such as recency of prior smoking and a history of obesity, can influence current health outcomes.\footnote{\citet{Tong_etal_1996-Lung-Carcinoma,Moore_etal_2008_Past-Body-Mass}.} Furthermore, because transition probabilities vary depending on demographic characteristics, such as race and ethnicity, education, gender, and age, the model tracks outcomes by socioeconomic subgroups, and it allows for responses to policies to be subgroup-specific. \\
 
-\noindent Health conditions are treated as absorbing states, i.e., once a person has a disease she is assumed to have it forever. A person can transition out of an obese state and back into it. A person can quit smoking and resume smoking. We model transitions of all health conditions and risk factors with a first-order Markov process. A number of restrictions are placed on the way a disease or condition is associated with other conditions (see Section \ref{section:transition_models} for details). Like the previous literature that uses FEM and FAM, we assume that risk factors and health conditions only from the prior period determine future health, disability, and mortality (a Markov process). This Markov assumption may be a potential limitation to the accuracy of disease dynamics, but given the available follow-up data it would be difficult to implement a higher order process. Moreover, to evaluate the performance of the estimated model, we validate it using various techniques, including comparing model results from early years with actual data available for later years.\footnote{\citet{Goldman_etal_2015_Future-America-Model}.} \\
+\noindent Like the previous literature that uses FEM and FAM, we model transitions of all health conditions, risk factors, disability, and mortality with a first-order Markov process. From a practical point of view, there are two main reasons why we prefer the assumption that risk factors and health conditions only from the prior period determine health transitions, instead of allowing for a higher order process. The first reason has to do with the ABC/CARE data: the available health follow-up data lacks multiple consecutive observations of health conditions for adults. Therefore, it is only possible to implement the simulation for the entering cohort as long as the transition matrix only depends on the previous period state vector (which corresponds to the health data in the ABC/CARE interviews). The second reason concerns the estimation: restricting the PSID sample to individuals present in three consecutive waves could leave out unhealthier or more unstable individuals who have a higher probability of dropping out. \\
+
+\noindent Health conditions are treated as absorbing states, i.e., once a person has a disease she is assumed to have it forever. But this is not the case for risk factors: a person can transition out of an obese state and back into it, a person can quit smoking and resume smoking. To discipline the rich dynamics of the model and based on evidence from the medical literature, a number of restrictions are placed on the way a disease or condition is associated with the transitions of other conditions (see Section \ref{section:transition_models} for details).  \\
 %Include table for models, reference here or in methods?
 
 \noindent Family formation models estimate transition probabilities between the following relationship statuses:  single, cohabiting, married, separated/divorced, and widowed. We use multivariate regression models to estimate the number of children born separately for women and men. Economic models are developed to estimate labor force participation and employment status (possible states allowed by the model are: unemployed, out of the labor force, working part-time, or working full-time), and the take-up of government social insurance programs such as disability insurance. 
 Transitions of labor earnings are projected outside of the simulation (Section \ref{app:subject_income} describes the methodology).  Because there is no information about assets in the age 30 ABC or CARE data, we do not simulate wealth transitions.\footnote{Additional details of the transition models are provided in \citet{Goldman_etal_2015_Future-America-Model}.} \\
 
-\noindent We simulate outcomes for cohorts that have the initial characteristics of the ABC/CARE treatment and control groups at age 30. In each year, we use the health, family, and economic transition models to predict obesity, smoking behavior, health status, economic status, family characteristics, and disability. We then use the models of health care spending to calculate medical costs for Medicare, other public sources excluding Medicare, and medical costs for private sources. We repeat the simulation each year until everyone in the cohort would have died. \\
+\noindent To evaluate the performance of the estimated model, we validate it using various techniques, including comparing model results from early years with actual data available for later years.\footnote{\citet{Goldman_etal_2015_Future-America-Model}.} Using these estimated transitions, we simulate outcomes for cohorts that have the initial characteristics of the ABC/CARE treatment and control groups at age 30. In each year, we use the health, family, and economic transition models to predict obesity, smoking behavior, health status, economic status, family characteristics, disability, and mortality. We then use the models of health care spending to calculate medical costs for Medicare, other public sources excluding Medicare, and medical costs for private sources. We repeat the simulation each year until everyone in the cohort would have died. \\
