--- a/Appendices/Methodology.tex
+++ b/Appendices/Methodology.tex
@@ -5,23 +5,23 @@
 
 \noindent In the main paper, we discuss three cases of attrition. Below, we elaborate on the methodology we use for each case. \\
 
-\subsubsection{Fully Observed Outcomes}
+\subsubsection{Complete Data}
 \label{app:method_fullobs}
 
-\noindent  In the case where we fully observe outcomes, we only need to address the compromised randomization
+\noindent  In the case where we have complete data, we only need to address the compromised randomization
 of treatment status in our empirical estimates (see Section \ref{section:methodology}). \\
 
 \noindent Randomization into treatment and control for each cohort occurred after the cohort was split
 into two subsamples balanced by gender, maternal IQ,
 and number of siblings. Subjects from each subsample were then matched on HRI, and randomized
 into their respective experimental groups. Sex, maternal IQ, number of siblings, and HRI
-therefore comprise $Z$. Thus, to obtain an
+therefore comprise $Z$. To obtain an
 unbiased estimate of the treatment effect, we regress the outcome variable on treatment status,
 controlling for those four baseline variables, as well as for cohort. \\
 
-\noindent We perform this estimation on 75 bootstrap resamples of the original ABC and CARE data for inference purposes. We take the mean of the empirical bootstrap distribution as our point estimate, and the standard deviation
+\noindent We estimate on 1,000 bootstrap resamples of the original ABC/CARE data to estimate sampling uncertainty. We take the mean of the empirical bootstrap distribution as our point estimate, and the standard deviation
 of the distribution as the standard error. We estimate these effects on the
-pooled ABC and CARE samples, as well as the male and female subsamples. This allows us to generate
+whole ABC/CARE sample, as well as the male and female subsamples. This allows us to generate
 rates of return and benefit/cost ratios for the male subsample, the female subsample, and the pooled sample. \\
 %Moreover, we are able to obtain more precise estimates of the treatment
 %effect for males, as the data for females generally exhibit more noise. See Table \ref{table:nonipw} for the list of outcomes to which we apply this method.
@@ -31,7 +31,7 @@ rates of return and benefit/cost ratios for the male subsample, the female subsa
 \label{app:method_partialobs}
 
 \noindent Given the small sample sizes of the ABC/CARE data, we consider outcome variables with fewer than 100 observations
-to exhibit a sizable rate of attrition. These variables include parental income at ages 2, 3, 4, 5, 9, 12,
+as having a sizable rate of attrition. These variables include parental income at ages 2, 3, 4, 5, 9, 12,
 and 15, for which we observe no more than 91 subjects at any given age; and the health survey at
 age 34, for which we observe no more than 72 subjects. \\
 
@@ -41,7 +41,7 @@ former with a logit model for treatment status, controlling for baseline
 variables used to determine randomization into treatment status: cohort,
 maternal IQ, number of siblings, HRI, and sex (in the case of pooled estimates). \\
 
-\noindent To estimate the propensity to respond, we similarly estimate a logit model of observing the outcome,
+\noindent To estimate the propensity to respond, we estimate a logit model of observing the outcome,
 controlling for treatment status and three additional covariates. The additional covariates are
 chosen amongst a set of variables likely to be correlated with non-response rates for the outcome variable.
 This set of variables includes baseline characteristics determining randomization,
@@ -53,9 +53,9 @@ to respond. We limit the number of covariates in our logit models to three as th
 
 \noindent To estimate the treatment effect, we regress the outcome of interest on treatment status, and weight the
 observations by the inverse of the product of the two propensity scores estimated with the method
-documented in Section~\ref{section:methodology} in the main paper. This procedure is performed on 75 bootstrap resamples of the original ABC/CARE data.
+discussed in Section~\ref{section:methodology} in the main paper. This procedure is performed on 1,000 bootstrap resamples of the original ABC/CARE data.
 We take the mean of the empirical bootstrap distribution as our point estimate, and the standard deviation
-of the distribution as the standard error. Again, we carry out this procedure for the
+of the distribution as the standard error. We carry out this procedure for the
 pooled sample, male subsample, and female subsample. \\
 
 \paragraph{Parental Income}
@@ -67,7 +67,7 @@ with IPW weights.
 To obtain a more complete picture of how the
 program affected parental income, we estimate the treatment effect in the missing ages by linearly
 interpolating the treatment effects between the years for which we observe parental income. We assume
-there are no impacts from age 16 onwards (i.e. a treatment effect of 0). \\
+there are no impacts from age 16 onwards (i.e. a treatment effect of 0). \textbf{[JJH: Jorge, can we not do better? Impute profiles using PSID?]}\\
 
 
 \subsubsection{Fully Missing Outcomes}
@@ -75,7 +75,7 @@ there are no impacts from age 16 onwards (i.e. a treatment effect of 0). \\
 
 \paragraph{Subject Income}
 
-\noindent Labor and public-transfer income of subjects are observed intermittently at ages 21 and 30 only. In order
+\noindent Labor and public-transfer income of subjects are only observed at ages 21 and 30. In order
 to obtain a complete measure of the impact of the ABC/CARE programs on subject income, we interpolate
 the income streams of subjects for ages 22 to 29, and extrapolate income streams for ages
 31 to 67 using three auxiliary datasets: NLSY79, CNLSY, and PSID. \\
@@ -85,9 +85,12 @@ datasets and the analysis sample. This is required in order for us to reliably u
 assumption by displaying the overlapping support sets of ABC/CARE and our auxiliary data for
 the variables used to interpolate and extrapolate earnings. For details about these datasets, see Appendix \ref{app:subject_income}. \\
 
+\noindent \textbf{[JJH: Jorge, these are hard to read and we are missing many of the variables we use to project.]} \\
+\textbf{[JJH: ? (mother's years of education)]}
+
 
 \begin{figure}[H]
-	\caption{Support of ABC and Auxiliary Data} \label{fig:support}
+	\caption{Support of ABC/CARE and Auxiliary Data} \label{fig:support}
 	\begin{subfigure}[h]{0.8\textwidth}
 	\centering
 	\caption{Income at Age 21} \label{fig:support_inc21}
@@ -144,14 +147,14 @@ the variables used to interpolate and extrapolate earnings. For details about th
 
 \noindent Both labor and public-transfer income are interpolated using the exact same methodology, so we restrict
 our attention to interpolating labor income. We employ the CNLSY dataset to model labor
-income at each age from 22 to 29. We use ordinary least squares and regress labor income of
+income at each age from 22 to 29. We use ordinary least squares and regress the labor income of
 CNLSY subjects on background characteristics and early adult outcomes. Variables for background
 characteristics consist of an indicator for being  black, mother's education, and sex. Variables
 used to interpolate early adult outcomes consist of labor income at ages 21 and 30, years of education at age 30, average
-PIAT math scores from ages 5 to 10, and BMI at age 34. We estimate the model on 75 bootstrap
+PIAT math scores from ages 5 to 10, and BMI at age 34. We estimate the model on 1,000 bootstrap
 resamples of the CNLSY to obtain a measure of prediction error, and denote the vectors of coefficients
 \emph{for the outcome variables} by $\beta_{a,s}$, where $a \in \{22, 23, \dots, 29\}$ denotes age, and
-$s \in \{1,2,\dots, 75\}$ indexes the bootstrap samples. \\
+$s \in \{1,2,\dots, 1,000\}$ indexes the bootstrap samples. \\
 
 % We impose two restrictions on the CNLSY dataset: one on birth year, and one on income.
 % In regard to birth year, we limit the sample to subjects born in between 1978 and 1983. As our
@@ -175,8 +178,8 @@ $s \in \{1,2,\dots, 75\}$ indexes the bootstrap samples. \\
 \noindent The outcome variables we use as independent variables to fit the model to the CNLSY data are also
 observed in the ABC/CARE data, and we are able to calculate the treatment effects on each of these outcomes
 using the procedures described in Appendix \ref{app:method_fullobs} and Appendix \ref{app:method_partialobs}. We
-obtain these estimates for 75 bootstrap resamples of both the ABC/CARE data, and denote the vectors of
-coefficients by $\gamma_r$, where $r \in \{1,2,\dots,75\}$ indexes the bootstrap samples. \\
+obtain these estimates for 1,-000 bootstrap resamples of both the ABC/CARE data, and denote the vectors of
+coefficients by $\gamma_r$, where $r \in \{1,2,\dots,1,000\}$ indexes the bootstrap samples. \\
 
 \noindent To interpolate the treatment effect on subject labor income at age $a$, we take the dot product
 of $\beta_{a, s}$ and $\gamma_r$ for all $s,r$ pairs, resulting in 5,625 scalars. We reintroduce
@@ -184,7 +187,7 @@ prediction error by first randomly drawing residuals from our fitted model on th
 them to the ABC/CARE subjects. We then take the mean difference of these residuals across treatment and control
 groups, and add it to the previously described scalar. We do this for all 5,625scalars. These scalars form the empirical
 bootstrap distribution of the treatment effect. Note that
-we bypass the estimation of the subjects' actual incomes, of which we are unable to obtain an
+we bypass the estimation of the subjects' actual incomes, for which we are unable to obtain an
 unbiased estimate. Instead, we directly obtain an unbiased estimate of the treatment effect. This
 method implies that the impacts of the treatment on adult labor income can be expressed through
 the observed early-adult outcomes. In this case, the observed early-adult outcomes are labor income at ages 21 and
@@ -209,7 +212,7 @@ restrict our outcome variables to years of education at age 30 and subject labor
 % nature of the PSID and NLSY, we apply a linear interpolation to both data sets.
 
 \noindent We estimate the vectors $\beta_{a, s}$ for $a \in \{31, 32, \dots, 67\}$ and $\gamma_r$, where
-$s,r \in \{1,2,\dots,75\}$ index the bootstrap samples, and take the dot product of every pair of
+$s,r \in \{1,2,\dots,1,000\}$ index the bootstrap samples, and take the dot product of every pair of
 $\beta_{a,s}$ and $\gamma_r$ vectors to obtain the empirical bootstrap distribution of the treatment
 effect on labor income past age 30. We take the mean of the distribution to be the point estimate,
 and the standard deviation of the distribution to be the standard error. \\
@@ -221,7 +224,7 @@ and the standard deviation of the distribution to be the standard error. \\
 income as the dependent variable in the regressions on our auxiliary datasets. In the case of
 extrapolating public-transfer income from welfare, unemployment benefits, AFDC, and food stamps, we also apply
 the same methodology as for labor income. However, in the case of disability insurance, social
-security, and supplemental security income, we apply an alternative approach. For these cases, we estimate
+security, and supplemental security income, we apply an alternative approach. For these variables, we estimate
 the probability each ABC/CARE individual claims each of those benefits at ages 31--67, and multiply those
 probabilities by the average annual claims of each type of public transfer reported by the Social
 Security Administration in 2014. See Appendix \ref{section:FAM_ABC_impute}
@@ -249,7 +252,7 @@ to estimate the treatment effect on the cost of criminal activity at every age f
 
 \begin{table}[H]
 \begin{threeparttable}
-\caption{Variables Estimated without IPW}
+\caption{Variables Estimated without IPW Adjustment}
 \label{table:nonipw}
 \centering
 \input{AppOutput/Methodology/nonipw_vars.tex}
@@ -272,9 +275,8 @@ treatment effects.
 \input{AppOutput/Methodology/model_select_pooled.tex}
 \begin{tablenotes}
 \tiny
-\item Note: The table above lists the variables used to generate the component of the
-inverse probability weights we use to account for attrition. To obtain this
-component for attrition, we estimate a logit model for observing the outcome variable,
+\item Note: The table above lists the variables used to generate the
+inverse probability weights we use to account for attrition. We estimate a logit model for observing the outcome variable,
 controlling for treatment, and three additional covariates depending on the outcome
 variable. The additional variables are chosen from a list of covariates possibly affecting
 response rates. The set yielding the lowest Akaike Information Criteria value is used to
@@ -293,9 +295,8 @@ generate the IPW weights, and are listed in the table above.
 \input{AppOutput/Methodology/model_select_female.tex}
 \begin{tablenotes}
 \tiny
-\item Note: The table above lists the variables used to generate the component of the
-inverse probability weights we use to account for attrition. To obtain this
-component for attrition, we estimate a logit model for observing the outcome variable,
+\item Note: The table above lists the variables used to generate the
+inverse probability weights we use to account for attrition. We estimate a logit model for observing the outcome variable,
 controlling for treatment, and three additional covariates depending on the outcome
 variable. The additional variables are chosen from a list of covariates possibly affecting
 response rates. The set yielding the lowest Akaike Information Criteria value is used to
@@ -316,9 +317,8 @@ generate the IPW weights, and are listed in the table above.
 \input{AppOutput/Methodology/model_select_male.tex}
 \begin{tablenotes}
 \tiny
-\item Note: The table above lists the variables used to generate the component of the
-inverse probability weights we use to account for attrition. To obtain this
-component for attrition, we estimate a logit model for observing the outcome variable,
+\item Note: The table above lists the variables used to generate the
+inverse probability weights we use to account for attrition. We estimate a logit model for observing the outcome variable,
 controlling for treatment, and three additional covariates depending on the outcome
 variable. The additional variables are chosen from a list of covariates possibly affecting
 response rates. The set yielding the lowest Akaike Information Criteria value is used to
@@ -377,6 +377,8 @@ We take the mean of the distributions to be the point estimates, and we take the
 to be the standard errors. To construct the 80\% confidence intervals, we take the 10\textsuperscript{th}
 and 90\textsuperscript{th} quantiles of each bootstrap distribution. \\
 
+\noindent{\textbf{[JJH: What is the basis for the 0.5 in public-transfer income? Why the 1.5?]}}
+
 \begin{table}[H]
 \begin{threeparttable}
 \caption{Components of Benefits and Costs}
@@ -385,7 +387,7 @@ and 90\textsuperscript{th} quantiles of each bootstrap distribution. \\
 \input{AppOutput/Methodology/bc_components.tex}
 \begin{tablenotes}
 \tiny
-\item Note: The table above lists the components of the costs and benefits of ABC/CARE.
+\item Note: The table lists the components of the costs and benefits of ABC/CARE.
 In order for some components to be categorized as benefits, we reversed the sign
 of the treatment effect. *Only education costs up until age 18 are multiplied by 1.5 to account for welfare costs.
 \end{tablenotes}
@@ -459,18 +461,18 @@ of the benefits to be the total benefits of the ABC/CARE programs (see Appendix~
 
 \noindent To account for deadweight loss, we assume a marginal welfare cost of 50\% by multiplying
 public costs components by a factor of $1.5$. For the same reason, we multiply public-transfer
-income by a factor of 0.5. We discount each component of the benefits and costs
+income by a factor of 0.5 \textbf{[JJH: Why? What principle?]}. We discount each component of the benefits and costs
 by 3\% every year to obtain their net present value at birth. We then sum up the discounted
 components of the benefits and find the ratio with the discounted costs. \\
 
 \noindent As described in Appendix \ref{app:method_identify}, we estimate the treatment effect on each
 component of the benefits and costs at time $t$ for the pooled, male, and
-female samples. We do this for 75 bootstrap resamples of the original ABC/CARE data.
+female samples. We do this for 1,000 bootstrap resamples of the original ABC/CARE data.
 In the case of health costs and subject income, for which we employ auxiliary datasets to
-estimate the treatment effects, we also obtain 75 bootstrap estimates from the auxiliary data
-for every ABC/CARE bootstrap resample, resulting in a total of 5,625 estimates.
+estimate the treatment effects, we also obtain 1,000 bootstrap estimates from the auxiliary data
+for every ABC/CARE bootstrap resample, resulting in a total of 1,000,000 estimates.
 By reusing each bootstrap estimate of the treatment effect on outcomes that do not require any auxiliary data
-set 75 times, we obtain a total of 5,625 estimates of the costs stream and benefits stream.
+set 1,000 times, we obtain a total of 1,000,000 estimates of the costs stream and benefits stream.
 We estimate the benefit/cost ratio for each of those streams.
 This is how we form our empirical bootstrap distribution of the benefit/cost ratio for the pooled, male, and female samples.
 We take the mean of the distributions to be the point estimates, and we take the standard deviations
